[tool.poetry]
name = "dcp-greeting-discord-bot"
version = "0.1.0"
description = ""
authors = ["Joshua Eygenraam <83786292+jeygen@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.9"
numpy = "^1.22.2"
discord = "^1.7.3"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
bandit = "^1.7.4"
black = "^22.3.0"
mypy = "^0.960"
pylint = "^2.13.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
